--- a/WpfApp1/Properties/Resources.resx
+++ b/WpfApp1/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="location_sign" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\assets\location-sign.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="onlyPause" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\assets\onlyPause.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pause" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\assets\pause.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
