--- a/Client-for-Traccar/Properties/Resources.resx
+++ b/Client-for-Traccar/Properties/Resources.resx
@@ -124,19 +124,16 @@
   <data name="diskette" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\assets\diskette.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\assets\icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="iconForSysTray" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="iconForSysTrayR" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\assets\icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="iconpng" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\assets\icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="location_sign" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\assets\location-sign.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="onlyPause" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\assets\onlyPause.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="onlyPause1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\assets\onlyPause.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="pause" type="System.Resources.ResXFileRef, System.Windows.Forms">
